Fix Scroll for overflow of text instead of visible

--- a/input/assets/css/theme.scss
+++ b/input/assets/css/theme.scss
@@ -488,7 +488,7 @@ code, code[class*="language-"], pre[class*="language-"] {
 }
 
 pre[class*="language-"] {
-    overflow: visible;
+    overflow: auto;
     margin: 5px 0;
     border-radius: 10px;
     padding-top: 30px !important;
